Address PR feedback

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/apiaryio/drafter-npm"
   },
-  "author": "Apiary",
+  "author": "Apiary Czech Republic, s.r.o. <support@apiary.io>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/apiaryio/drafter-npm/issues"
