--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "protagonist": "^1.6.0"
   },
   "devDependencies": {
-    "mocha": "~1.17.1",
-    "chai": "~1.9.0"
+    "mocha": "^3.2.0",
+    "chai": "^3.5.0"
   }
 }
