--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drafter",
-  "version": "1.2.0",
+  "version": "2.0.0-pre0",
   "description": "Node API Blueprint Parser",
   "main": "lib/drafter.js",
   "engines": {
@@ -20,10 +20,10 @@
     "test": "mocha"
   },
   "dependencies": {
-    "drafter.js": "^2.6.0"
+    "drafter.js": "^3.0.0-pre0"
   },
   "optionalDependencies": {
-    "protagonist": "^1.6.0"
+    "protagonist": "^2.0.0-pre0"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
