--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,18 @@ dist: trusty
 node_js:
 - '6'
 
-env:
-- PROTAGONIST=true
-- PROTAGONIST=false
-
 before_install:
 - if ! "$PROTAGONIST"; then sudo apt-get purge build-essential && sudo apt-get autoremove; fi
 
 before_script:
 - if ! "$PROTAGONIST" && [ -d "node_modules/protagonist" ]; then echo "Protagonist was successfully installed (should not have been)." && exit 1; fi
+
+script:
+- if [ -d "node_modules/protagonist" ]; then echo "Protagonist was installed (should not have been)." && exit 1; fi
+- npm test
+- npm i protagonist
+- if [ -d "node_modules/protagonist" ]; then echo "Protagonist was successfully installed."; fi
+- npm test
 
 deploy:
   provider: npm
@@ -24,5 +27,3 @@ deploy:
     tags: true
     repo: apiaryio/drafter-npm
     node_js: '6'
-    env:
-      - PROTAGONIST=true
