--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drafter",
-  "version": "2.0.0-pre.1",
+  "version": "2.0.0",
   "description": "Node API Blueprint Parser",
   "main": "lib/drafter.js",
   "engines": {
@@ -20,10 +20,10 @@
     "test": "mocha"
   },
   "dependencies": {
-    "drafter.js": "^3.0.0-pre.2"
+    "drafter.js": "^3.0.2"
   },
   "optionalDependencies": {
-    "protagonist": "^2.0.0-pre.2"
+    "protagonist": "^2.0.2"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
